Implement android power manager

--- a/packages/android_power_manager/android/src/main/AndroidManifest.xml
+++ b/packages/android_power_manager/android/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="org.demen.android_power_manager">
+          package="org.demen.androidpowermanager">
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
 </manifest>
