--- a/packages/android_power_manager/pubspec.yaml
+++ b/packages/android_power_manager/pubspec.yaml
@@ -1,6 +1,6 @@
 name: android_power_manager
 description: A Flutter plugin for Android for invoking Power Manager api.
-version: 0.1.2
+version: 0.1.4
 author: thai <thaihuynhxyz@gmail.com>
 homepage: https://github.com/de-men/flutter_android/tree/master/packages/android_power_manager
 
@@ -27,6 +27,7 @@ flutter:
   plugin:
     androidPackage: org.demen.android_power_manager
     pluginClass: AndroidPowerManagerPlugin
+    iosPrefix: 
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
