--- a/packages/android_power_manager/android/.project
+++ b/packages/android_power_manager/android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>android_power_manager</name>
+	<name>androidpowermanager</name>
 	<comment>Project android_power_manager created by Buildship.</comment>
 	<projects>
 	</projects>
