--- a/packages/android_power_manager/pubspec.yaml
+++ b/packages/android_power_manager/pubspec.yaml
@@ -1,6 +1,6 @@
 name: android_power_manager
 description: A Flutter plugin for Android for invoking Power Manager api.
-version: 0.1.4
+version: 0.1.6
 author: thai <thaihuynhxyz@gmail.com>
 homepage: https://github.com/de-men/flutter_android/tree/master/packages/android_power_manager
 
@@ -25,9 +25,9 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: org.demen.android_power_manager
+    androidPackage: org.demen.androidpowermanager
     pluginClass: AndroidPowerManagerPlugin
-    iosPrefix: 
+    iosPrefix:
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
