--- a/packages/android_power_manager/example/pubspec.yaml
+++ b/packages/android_power_manager/example/pubspec.yaml
@@ -3,11 +3,14 @@ description: Demonstrates how to use the androidpowermanager plugin.
 publish_to: 'none'
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
+  android_power_manager:
+    path: ../
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -17,8 +20,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  android_power_manager:
-    path: ../
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
+  flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
