--- a/packages/android_power_manager/pubspec.yaml
+++ b/packages/android_power_manager/pubspec.yaml
@@ -1,11 +1,11 @@
 name: android_power_manager
 description: A Flutter plugin for Android for invoking Power Manager api.
-version: 0.1.6
-author: thai <thaihuynhxyz@gmail.com>
+version: 1.0.0
 homepage: https://github.com/de-men/flutter_android/tree/master/packages/android_power_manager
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
+  flutter: ">=2.5.0"
 
 dependencies:
   flutter:
@@ -14,6 +14,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -25,9 +26,10 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: org.demen.androidpowermanager
-    pluginClass: AndroidPowerManagerPlugin
-    iosPrefix:
+    platforms:
+      android:
+        package: org.demen.androidpowermanager
+        pluginClass: AndroidPowerManagerPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
